Fix: Make the fetched properties in the history page more readable

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,7 +34,10 @@ div#buttonWrapper {
   margin: 50px auto;
 }
 
-div.history,
+div.history {
+  width: 40%;
+  margin: 0 auto;
+}
 div.russian-result,
 div.even-result {
   width: 35%;
